--- a/Weapons.html
+++ b/Weapons.html
@@ -57,7 +57,7 @@
         <div class="container">
          
             
-          <h1 class="display-5 col align-self-start">Rusty Sword</h1>
+          <h1 class="display-5">Rusty Sword</h1>
           <p class="lead col ">Available free at the Harbor / Docks.</p>
           <p class="lead req col align-self-end">5 Strength Req | Unbreakable</p>
           </div>
