Added new groups

--- a/Armor.html
+++ b/Armor.html
@@ -25,16 +25,22 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">Legacy Of The Zodiac</div>
-      <div class="list-group list-group-flush">
-        <a href="index.html" class="list-group-item list-group-item-action bg-light">Home</a>
-        <a href="Weapons.html" class="list-group-item list-group-item-action bg-light">Weapons</a>
-        <a href="Armor.html" class="list-group-item list-group-item-action bg-light">Armor</a>
-        <a href="Helmets.html" class="list-group-item list-group-item-action bg-light">Helmets</a>
-        <a href="Accesories.html" class="list-group-item list-group-item-action bg-light">Accesories</a>
-        <a href="ClassWeapons.html" class="list-group-item list-group-item-action bg-light">Class Weapons</a>
-      </div>
-    </div>
+            <div class="sidebar-heading">Legacy Of The Zodiac</div>
+            <div class="list-group list-group-flush">
+              <a href="#" class="list-group-item list-group-item-action bg-light">Home</a>
+              <a href="Weapons.html" class="list-group-item list-group-item-action bg-light">Weapons</a>
+              <a href="Armor.html" class="list-group-item list-group-item-action bg-light">Armor</a>
+              <a href="Helmets.html" class="list-group-item list-group-item-action bg-light">Helmets</a>
+              <a href="Accesories.html" class="list-group-item list-group-item-action bg-light">Accesories</a>
+              <a href="Staffs.html" class="list-group-item list-group-item-action bg-light">Staffs</a>
+              <a href="Shields.html" class="list-group-item list-group-item-action bg-light">Shields</a>
+              <a href="Spells.html" class="list-group-item list-group-item-action bg-light">Spells</a>
+              <a href="ClassWeapons.html" class="list-group-item list-group-item-action bg-light">Class Weapons</a>
+              <a href="Ranklist.html" class="list-group-item list-group-item-action bg-light">Ranks</a>
+              <a href="Quests.html" class="list-group-item list-group-item-action bg-light">Quests</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">Download</a>
+            </div>
+          </div>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
