--- a/Helmets.html
+++ b/Helmets.html
@@ -57,9 +57,108 @@
       </nav>
 
       <div class="container-fluid titles">
-        <h1 class="mt-4 mx-auto">Legacy Of The Zodiac</h1>
+        <h1 class="mt-4 mx-auto">Helmets</h1>
        
       </div>
+      <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Cache</h1>
+              <p class="lead">Available free at the Docks / Harbor.</p>
+              <p class="lead req">2 Agility Req | Unbreakable</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Hachimaki</h1>
+              <p class="lead">Inside Haven Accessory Shop for 2,500 Gold.</p>
+              <p class="lead req">10 Agility Req | 76 Durability</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Circlet</h1>
+              <p class="lead">Inside Haven Accessory Shop for 5,000 Gold.</p>
+              <p class="lead req">18 Agility Req | 89 Durability
+                </p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Emperor Crown </h1>
+              <p class="lead">Inside Haven Accessory Shop for 8,000 Gold.</p>
+              <p class="lead req">30 Agility Req | 135 Durability</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Warriors Headband</h1>
+              <p class="lead">Dropped from Pawns Of Archanis located at the Tower Of Archanis entrance.</p>
+              <p class="lead req">40 Agility Req | 170 Durability | +10 Defense</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Ancients Helmet</h1>
+              <p class="lead">230 Imp Venom required. Dropped from Imp's of Mahazael located on Crescent Mountain. Once you have them, trade them in at Crescent Shop, South East of the Mountain.</p>
+              <p class="lead req">50 Agility Req | 185 Durability | +40 Defense</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Federation Hachimaki</h1>
+              <p class="lead">125 Corrupted Necklace(s) which are dropped by Corrupted Faires and 5 10k gold bars which are in nara forest, left of where you enter Nara. </p>
+              <p class="lead req">58 Agility Req | 190 Durability | +25 Defense</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Shade Hood</h1>
+              <p class="lead">150 Vampire Fangs, 100 Golem Stones, Vampires Demise required. Firstly you need 150 Vampire Fangs and 100 Golem stones. Vampires are located inside Nara Caverns, along with Golems. For the Golem Stones, you must kill the Golems in the red zone, not the grey zone ones. Once you have the items, trade them in for a Barrier Breaker, one map right of Nara Weapons Shop. Go past all the red zone golems until you come to two rocks and a Beserk Golem. Stand on the warp and kill the Beserk Golem. He drops a Rock Breaker, which you will need to exit this map. After using the Rock Breaker (Doesn't dissolve) on the rocks, you will come to a gate. Use your Barrier Breaker on the first gate to get inside. Once inside, run past the Warrior Ghouls, and head to the 2nd gate where you must use your Barrier Breaker again (Dissolves) and step on the warps at the top of the map. You will be warped to Cain's Grave along with several of his minions. Kill Cain and he will drop a Vampires Demise. You can either stay here and train on the Ghouls or exit.After exiting, go back to the map right of Nara Weapon Shop, and trade your Vampires Demise in for a Shade Hood.</p>
+              <p class="lead req">76 Agility Req | 220 Durability</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Zunari Kabuto</h1>
+              <p class="lead">Dropped from Sub Zero Warriors located all over Sub Zero town. (Rare drop)</p>
+              <p class="lead req">100 Agility Req | 240 Durability</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Hachiman Jinpachi</h1>
+              <p class="lead">500 Skulls required. Okay, firstly you need to go up Crescent Mountain, past the Cave Dwellers, past the Demons, and you will see the Crescent Lord. On this map, you should see a cave below him which you need to go in. Inside the cave are Skeletons and a Skeleton Cheiftan which drop Skulls. You need 500 skulls for the helmet, and you trade them in on the first map inside the cave. If you're strong enough, you can go one map right, and kill Skeleton Hounds, who drop more Skulls, or even try the Skeleton Lord who drops the Helmet at a high rate.</p>
+              <p class="lead req">125 Agility Req | 275 Durability</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Daishi's Crown </h1>
+              <p class="lead">700 White Fang Hides, 300 10K Fake Gold Bars required. Travel to Kenshi, located far west of the World Map. Kill Roruni birds for 900 drumsticks and go to the south-west house in Kenshi. Trade them for a Gate key, then go east inside the city of Kenshi. Use the Gate key on the gate to open it. Make your way to the further end parts of the plains, and somewhere around you will find Highwaymen (Night spawn). These will drop 1 10K Fake Gold Bar and sometimes 3 and can be found mostly all over the end parts of the Plains. When you have collected the Fake Gold Bars, go to the Greedy Merchant at the middle of Kenshi, and trade your Fake Gold Bars. The white fang hides drop 7 at a time from the White Fangs 1/1 drop rate.</p>
+              <p class="lead req">150 Agility Req | 300 Durability | +10 Defence</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Wyrm Mask</h1>
+              <p class="lead">800 Dragon Nails, Grand Dragon Lord Head required. Before we start, to be able to get up Ryushin Mountain, you need a Wyrm Artifact, which is dropped from Grand Wyrms. These are located to the East and West of Ryoko. After you have that, walk up, and go inside the last tent on the road, and open the door with your Wyrm Artifact (Doesn't dissolve). Climb up the ladder and you will encounter some Dragons. There are a variety of Dragons up the mountain which all drop different amount of Dragon Nails, according to their difficulty level. You choose which ones suit you and collect 800 of these. Then, go back down the mountain and back out of the tent. You will see another tent to the right of you, which you will need to go inside. In here, you trade your 800 Dragon Nails for a Dragon Fang.
+
+                    Then, head all the way up the mountain again, until you come to a double path. Take the top route and carry on until you see a statue blocking your path. Use your Dragon Fang here (Doesn't dissolve) and enter the last map. Here you will fight the Grand Dragon Lord who drops Grand Dragon Lord Head, but it's a hard drop. After you get the drop, head all the way back to the second tent, where you traded for your Dragon Fang, and trade both Grand Dragon Lord Head and your Dragon Fang for a Wyrm Mask. Congratulations.</p>
+              <p class="lead req">175 Agility Req | 350 Durability | +50 Defense</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Runic Diadem</h1>
+              <p class="lead">Master Passport, 3000 Emerald Scales, 75 Shaker(s) Armor(s), 1500 Dragon Venom, 888 Soul Orb(s), Ancient Sigil, Life Shard, Death Shard, 750 Aura Stone(s), Vakot's Heart, Left Ventricle Tissue, Right Ventricle Tissue required. Before you start collecting for the RD you need a key called the Master Passport. To get this key, first you need 350 Seals of Tazel which are dropped by Southern Tazel(s) found on Hidden Island. Once you have those, head to Nara into a cabin called the Trading Outpost and trade your 350 Seals of Tazels in for the Backroom Key. Then go up Crescent Mountain and collect 700 Demon Wings dropped by the Demon's. Once you have those, use your Backroom Key in the Nara Trading Outpost and trade the Backroom Key in for a Key Voucher, then trade the Key Voucher and the Demon Wings in for an Armory Storage Key. After that, take your Armory Storage Key and use it on the counter in the Haven Armor Shop and head into the back door. Now you must collect 1000 Stolen Goods, dropped from the Raiders. Once you have these head to the Antique Dealer in Haven and trade the Stolen Goods for 150 Ancient Gold. Once having done this, you'll need to try for a Mystical Stone drop, from the Hell Sleeper in The East. When you have that, head to Zhu Jin and collect 200 Tribal Necklaces from the Tribal Gods. When you have all these materials, head to Shinjoku City and trade them all for a Passport. Finally, head to the Alkanor Steppes and into Jaishu's Cavern. Here you trade the Passport and 150 Ancient Gold in for a Master Passport! Now you can start collecting the Ruinic Diadem. Head to Haven Outskirts and into 'Airships R Us' and use your Master Passport on the door.
+
+                    The items needed for this helm are dropped by all various NPC's: Emerald Scales - Ancient Demonesses, Shakers Armor(s) - Armored Shaker, Dragon Venom - Terrorwing, Soul Orb(s) - Unknown Beholder, Ancient Sigil - Steel Angel, Life Shard - Kyrael, Death Shard - Myrifel, Aura Stones - Zealots. Once you have all the items you can start trading them in for keys and other items, at the Idilican's Retreat (A cave on Fertile Crest.) Once you have all the items traded in, head north/west and into the cave using the Ancient Counter Seal then follow the Trail of the Undead and go through until you reach Traveler's Barricade and see a big statue on the northern wall, use your Ancient Counter Seal there and proceed north. Now kill the two npcs infront of you until they drop a Life Shard and a Death Shard. Once you get those two shards, double click on them to combine them together for the Light and Death key. Now proceed north threw the doors and collect 750 Aura Stone(s) and trade them in on the Inner Sanctum map with Sanoi on it, once you've done that head north and enter the Ruinic Chamber using your Aura Sphere key you just recieved. Kill the Left and Right Ventricles until you have a drop of each, then kill Vakot the Betrayer for his drop (or vis versa, whatever you prefer :p). Once you have everything you need for the helm, you will see it sitting underneath an altar on the map, if you have all the required items you can walk onto the Ruinic Diadem, be sent to another map, and pick it up. Congratulations!</p>
+              <p class="lead req">200 Agility Req | 450 Durability | +125 Defense</p>
+            </div>
+    </div>
+   
+
+
     </div>
     <!-- /#page-content-wrapper -->
 
