--- a/Staffs.html
+++ b/Staffs.html
@@ -32,7 +32,7 @@
         <a href="Armor.html" class="list-group-item list-group-item-action bg-light">Armor</a>
         <a href="Helmets.html" class="list-group-item list-group-item-action bg-light">Helmets</a>
         <a href="Accesories.html" class="list-group-item list-group-item-action bg-light">Accesories</a>
-        <a href="Staffs.html" class="list-group-item list-group-item-action bg-light">Staffs</a>
+        <a href="Staffs.html" class="list-group-item list-group-item-action bg-light">Staves</a>
         <a href="Shields.html" class="list-group-item list-group-item-action bg-light">Shields</a>
         <a href="Spells.html" class="list-group-item list-group-item-action bg-light">Spells</a>
         <a href="ClassWeapons.html" class="list-group-item list-group-item-action bg-light">Class Weapons</a>
@@ -57,9 +57,80 @@
       </nav>
 
       <div class="container-fluid titles">
-        <h1 class="mt-4 mx-auto">Legacy Of The Zodiac</h1>
+        <h1 class="mt-4 mx-auto">Staves</h1>
        
       </div>
+      <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Staff of Hawthorn</h1>
+              <p class="lead">Available free at the Docks / Harbor.</p>
+              <p class="lead req">Level 1 Req | 100 Durability | +25 Magic | 3 MP Regen | 5 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Iron Staff</h1>
+              <p class="lead">One map below the Docks / Harbor, 15,000 Gold.</p>
+              <p class="lead req">Level 15 Req | 130 Durability | +65 Magic | 9 MP Regen | 18 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Mana Crystal Staff</h1>
+              <p class="lead">Inside Nara Magic Shop, 25,000 Gold.</p>
+              <p class="lead req">Level 30 Req | 160 Durability | +120 Magic | 0 MP Regen | 32 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Sapphire Stave</h1>
+              <p class="lead">230 Sapphire Shards required. Sapphire Shards drop from the Marauders that are located north of Nara. When you have collected them, head to the Nara Magic Shop.</p>
+              <p class="lead req">Level 52 | 185 Durability | +180 Magic | 75 MP Regen | 85 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Rod of Eminence</h1>
+              <p class="lead">20 Shining Red Ore, 10 Shining Blue Ore required. A Rock Smasher (5 100k Gold Bars at the Nara Mines Shop) is needed to obtain Shining Red and Blue Ores. Go to the western most map in Nara Mines, and use the Rock Smasher on the darker rock (Doesn’t dissolve) and gain access to the Deep Core. After you have the Ores, trade them in at the Nara Mines Shop.</p>
+              <p class="lead req">Level 75 Req | 200 Durability | +286 Magic | 110 MP Regen | 125 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Shaman Stave</h1>
+              <p class="lead">125 Shaman Essences required. Shaman Essence drops from Elder Ogre Wizards who are located west or Ryoko but north from 'The West'. Once you have collected the Essences, head down a few maps and go right, here you can trade for the Stave.</p>
+              <p class="lead req">Level 125 Req | 225 Durability | +340 Magic | 175 MP Regen | 150 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Staff of North Winds</h1>
+              <p class="lead">3750 Sun Scales required. Sun Scales drop from multiple NPC's all over Cavern of the Sun! </p>
+              <p class="lead req">Level 125 Req | 240 Durability | +348 Magic | 190 MP Regen | 165 MP | 3% EXP Bonus
+                </p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Rod of Aquarius</h1>
+              <p class="lead">125 Diamonds and 750 Iron Ore required. Mine both Diamonds and Iron Ore from Nara Mines. When you have collected the items, trade for the staff at the Old Magus House in South/West Shinjoku.</p>
+              <p class="lead req">155 Req | 275 Durablilty | +380 Magic | 230 MP Regen | 195 MP</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Scaled Dragon Staff</h1>
+              <p class="lead">8500 Sun scale(s).</p>
+              <p class="lead req">????</p>
+            </div>
+    </div>
+    <div class="jumbotron ">
+            <div class="container">
+              <h1 class="display-5">Staff of Wyrms</h1>
+              <p class="lead">3,000 Wyrm Eggs required. Wyrm Eggs are dropped from Wyrms and Mother Wyrms located at Ryoko. Both maps for collecting are red zones, so be careful, once you have all the wyrm eggs trade them in at Ryoko Coast for your Staff Of Wyrms.</p>
+              <p class="lead req">Level 180 Req | 300 Durability | +468 Magic | 275 MP Regen | 225 MP</p>
+            </div>
+    </div>
     </div>
     <!-- /#page-content-wrapper -->
 
