--- a/ClassWeapons.html
+++ b/ClassWeapons.html
@@ -32,7 +32,7 @@
         <a href="Armor.html" class="list-group-item list-group-item-action bg-light">Armor</a>
         <a href="Helmets.html" class="list-group-item list-group-item-action bg-light">Helmets</a>
         <a href="Accesories.html" class="list-group-item list-group-item-action bg-light">Accesories</a>
-        <a href="Staffs.html" class="list-group-item list-group-item-action bg-light">Staffs</a>
+        <a href="Staffs.html" class="list-group-item list-group-item-action bg-light">Staves</a>
         <a href="Shields.html" class="list-group-item list-group-item-action bg-light">Shields</a>
         <a href="Spells.html" class="list-group-item list-group-item-action bg-light">Spells</a>
         <a href="ClassWeapons.html" class="list-group-item list-group-item-action bg-light">Class Weapons</a>
